change image of main page - drachenfliegen

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-  image: "/images/F49DEE1F-B8DA-4C41-9CCF-3EAEC1A8023B_1_105_c.jpeg"
+  image: "/images/Drachenfliegen.jpeg"
 ---
